# rusty-space-invaders

./: Cargo.toml  README.md
assets/: Alien1_2.psd  Alien2.psd  Alien2_2.psd  Alien3.psd  Alien3_2.psd  Player.psd  alien_explosion.psd  barrier.psd  block.psd  bullet_top_bang.psd  credit.psd  hi_score.psd  letter_a.psd  letter_e.psd  letter_g.psd  letter_m.psd  letter_o.psd  letter_r.psd  letter_v.psd  player_bullet.psd  player_bullet_small.psd  player_explosion.psd  player_explosion_2.psd  score.psd  score_1.psd  score_2.psd  ship.psd  splash.psd  sprite-animation.json  sprite-sheet.json  sprite-sheet.tps  test_2.psd  text_0.psd  text_1.psd  text_2.psd  text_3.psd  text_4.psd  text_5.psd  text_6.psd  text_7.psd  (+2 more)
src/: animation.rs  audio.rs  collision.rs  config.rs  controls.rs  cut_stuff  entity.rs  frame.rs  interface.rs  interface_desktop.in  interface_raylib.in  main.rs  math.rs  renderer.rs  sound.rs  sprite_sheet.rs  text.rs  timer.rs  world.rs
