[package]
name = "space-invaders"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
use-raylib = ["raylib"]

[dependencies]
pixels = "0.1.0"
winit = "0.25.0"
winit_input_helper = "0.10.0"
gilrs = "0.8.1"
serde_json = "1.0.64"
serde = "1.0.126"
serde_derive = "1.0.126"
image = "0.23.14"
env_logger = "0.8"
log = "0.4"
euclid = "0.22.6"
line_drawing = "0.8.1"
lazy_static = "1.4.0"
either = "1.6.1"
rand = "0.8.4"
rodio = "0.11.0"
confy = "0.4.0"
raylib = { version = "3.5.0", optional = true }
